--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title></title>
-	<link rel="stylesheet" href="">
+	<title>javascript øvelser1</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+	<script src="https://code.jquery.com/jquery-3.3.1.js "></script>
+	<script src="javascript.js "></script>
 
 </body>
 
