--- a/areal-1.html
+++ b/areal-1.html
@@ -4,16 +4,20 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>javascript øvelse1</title>
-	<link rel="stylesheet" href="style.css">
+	<title>areal 1</title>
+	<link rel="stylesheet" href="">
 </head>
 
 <body>
-
 	<script>
-		//In-docu javascript
-	</script>
+		const længde = 3;
+		const bredde = 5;
+		const areal = længde * bredde;
 
+
+
+		console.log(areal);
+	</script>
 </body>
 
 </html>
