nu virker opgave 2

--- a/arealTest-2.html
+++ b/arealTest-2.html
@@ -9,13 +9,13 @@
 
 <body>
 	<script>
-		const areal = 135;
+		const areal = 235;
 
 		if (areal <= 100) {
 			console.log("Arealet er for lille");
 		} else if (areal > 100 && areal < 200) {
 			console.log("Arealet er tilpads");
-		} else(areal => 200) {
+		} else if (areal => 200) {
 			console.log("Arealet er for stort");
 		}
 	</script>
