--- a/dag2/querySelector.html
+++ b/dag2/querySelector.html
@@ -4,83 +4,35 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>A</title>
+	<title>js-oevelse-1</title>
 	<style>
-		#box,
-		#bax {
-			width: 200px;
-			height: 200px;
-			background-color: wheat;
-			padding: 20px;
-			margin: 10px;
+		body {
+			color: burlywood;
 		}
 
-		button {
-			font-size: 2rem;
-			margin: 10px;
+		.box {
+			display: inline-block;
+			width: 10vw;
+			height: 10vw;
+			border: 1px solid silver;
+			margin: 7vw;
+			transition: all 1s;
 		}
+
+		/*********************/
+
 	</style>
 
 </head>
 
 <body>
-	<button id="klik">
-        klik
-    </button>
-	<button id="slet">
-        slet
-    </button>
-	<button id="html">
-        html
-    </button>
-	<button id="flyt">
-        flyt
-    </button>
-	<div id="box"></div>
-	<div id="bax"></div>
+	<div class="box" id="box1"></div>
+	<div class="box" id="box2"></div>
+	<div class="box" id="box3"></div>
+	<div class="box" id="box4"></div>
 
 	<script>
-		const klik = document.querySelector("#klik");
-		const slet = document.querySelector("#slet");
-		const html = document.querySelector("#html");
-		const box = document.querySelector("#box");
-		const flyt = document.querySelector("#flyt");
-		const bax = document.querySelector("#bax");
-
-		slet.addEventListener("click", knap2);
-		klik.addEventListener("click", knap1);
-		html.addEventListener("click", knap3);
-		flyt.addEventListener("click", knap4);
 
 
-		function knap1() {
-			console.log("Knap 1");
-			bax.innerHTML = "";
-			box.textContent = "KLIK";
-			box.innerHTML = "";
-		}
-
-		function knap2() {
-			console.log("knap2");
-			bax.innerHTML = "";
-			box.textContent = "";
-			box.innerHTML = "";
-
-		}
-
-		function knap3() {
-			console.log("knap3");
-			box.innerHTML = "<h2>OVERSKRIFT</h2> <p>Paragraph</p>";
-			bax.innerHTML = "";
-			box.innerHTML = "";
-		}
-
-		function knap4() {
-			console.log("knap4");
-			box.innerHTML = "";
-			bax.innerHTML = "<h2>OVERSKRIFT</h2> <p>Paragraph</p>";
-		}
 	</script>
 </body>
-
-</html>
